[gd_scene load_steps=12 format=2]

[ext_resource path="res://assets/scenes/mainmenu.gd" type="Script" id=1]
[ext_resource path="res://theme/font_bold.ttf" type="DynamicFontData" id=3]
[ext_resource path="res://theme/font_bold.tres" type="DynamicFont" id=4]
[ext_resource path="res://theme.tres" type="Theme" id=5]

[sub_resource type="DynamicFont" id=1]
size = 46
outline_size = 2
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 3 )

[sub_resource type="DynamicFont" id=2]
size = 32
outline_size = 2
outline_color = Color( 0, 0, 0, 1 )
extra_spacing_char = 2
font_data = ExtResource( 3 )

[sub_resource type="DynamicFont" id=3]
size = 26
outline_size = 2
outline_color = Color( 0, 0, 0, 1 )
extra_spacing_char = 2
font_data = ExtResource( 3 )

[sub_resource type="InputEventAction" id=5]
action = "esc"

[sub_resource type="ShortCut" id=4]
shortcut = SubResource( 5 )

[sub_resource type="Shader" id=6]
code = "// NOTE: Shader automatically converted from Godot Engine 3.5.stable's CanvasItemMaterial.

shader_type canvas_item;
render_mode blend_mix;

uniform vec2 Size = vec2(5.0,5.0);

void fragment(){
	vec4 clr = texture(SCREEN_TEXTURE, SCREEN_UV);
	
//	vec4 avg_clr = (
//		texture(SCREEN_TEXTURE, SCREEN_UV + vec2(SCREEN_PIXEL_SIZE.x,0.0)) + 
//		texture(SCREEN_TEXTURE, SCREEN_UV + vec2(-SCREEN_PIXEL_SIZE.x,0.0)) + 
//		texture(SCREEN_TEXTURE, SCREEN_UV + vec2(SCREEN_PIXEL_SIZE.x,SCREEN_PIXEL_SIZE.y)) + 
//		texture(SCREEN_TEXTURE, SCREEN_UV + vec2(SCREEN_PIXEL_SIZE.x,-SCREEN_PIXEL_SIZE.y)) + 
//		texture(SCREEN_TEXTURE, SCREEN_UV + vec2(-SCREEN_PIXEL_SIZE.x,SCREEN_PIXEL_SIZE.y)) + 
//		texture(SCREEN_TEXTURE, SCREEN_UV - vec2(SCREEN_PIXEL_SIZE.x,SCREEN_PIXEL_SIZE.y)) + 
//		texture(SCREEN_TEXTURE, SCREEN_UV + vec2(0.0,SCREEN_PIXEL_SIZE.y)) + 
//		texture(SCREEN_TEXTURE, SCREEN_UV - vec2(0.0,SCREEN_PIXEL_SIZE.y))
//	) / 8.0;
	
	vec4 avg_clr;
	
	vec2 mid_Size = (Size - vec2(1.0)) / 2.0;
	
	for (float x; x < Size.x;x+=1.0){for (float y; y < Size.y; y+=1.0){
		if (x ==0.0 && y == 0.0) {continue;}
		avg_clr += texture(SCREEN_TEXTURE, SCREEN_UV + (SCREEN_PIXEL_SIZE * vec2(mid_Size.x - x,mid_Size.y - y)));
	}}
	
	if (abs(clr.r - avg_clr.r) >= 0.25){clr.r += 0.15 * sign(clr.r - avg_clr.r)}
	if (abs(clr.g - avg_clr.g) >= 0.25){clr.g += 0.15 * sign(clr.g - avg_clr.g)}
	if (abs(clr.b - avg_clr.b) >= 0.25){clr.b += 0.15 * sign(clr.b - avg_clr.b)}
	
	COLOR = clr;
}
"

[sub_resource type="ShaderMaterial" id=7]
shader = SubResource( 6 )
shader_param/Size = Vector2( 17, 17 )

[node name="Mainmenu" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
theme = ExtResource( 5 )
script = ExtResource( 1 )

[node name="WorldEnvironment" type="WorldEnvironment" parent="."]

[node name="buttons" type="Panel" parent="."]
anchor_bottom = 1.0
margin_right = 142.0

[node name="body" type="VBoxContainer" parent="buttons"]
anchor_bottom = 1.0
margin_right = 284.0

[node name="title" type="Label" parent="buttons/body"]
margin_right = 284.0
margin_bottom = 56.0
custom_fonts/font = SubResource( 1 )
text = "Lavander!"
align = 1
valign = 1

[node name="play" type="Button" parent="buttons/body"]
margin_top = 60.0
margin_right = 284.0
margin_bottom = 102.0
custom_fonts/font = SubResource( 2 )
text = "PLAY"

[node name="settings" type="Button" parent="buttons/body"]
margin_top = 106.0
margin_right = 284.0
margin_bottom = 148.0
custom_fonts/font = SubResource( 2 )
text = "Settings"

[node name="mods" type="Button" parent="buttons/body"]
margin_top = 152.0
margin_right = 220.0
margin_bottom = 188.0
rect_min_size = Vector2( 220, 0 )
size_flags_horizontal = 0
custom_fonts/font = SubResource( 3 )
text = "Mods"

[node name="my_sm1" type="LinkButton" parent="."]
self_modulate = Color( 0.588235, 0.968627, 1, 1 )
anchor_top = 1.0
anchor_bottom = 1.0
margin_left = 142.0
margin_top = -28.0
margin_right = 232.0
margin_bottom = -15.0
custom_fonts/font = ExtResource( 4 )
text = "@BotatoDev"
underline = 1

[node name="my_sm2" type="LinkButton" parent="."]
self_modulate = Color( 0.411765, 0.447059, 1, 1 )
anchor_top = 1.0
anchor_bottom = 1.0
margin_left = 142.0
margin_top = -15.0
margin_right = 232.0
margin_bottom = -2.0
focus_mode = 2
custom_fonts/font = ExtResource( 4 )
text = "Discord"
underline = 1

[node name="settings" type="Panel" parent="."]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0

[node name="mods" type="Panel" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="cont" type="MarginContainer" parent="mods"]
anchor_right = 1.0
anchor_bottom = 1.0
custom_constants/margin_right = 4
custom_constants/margin_top = 4
custom_constants/margin_left = 4
custom_constants/margin_bottom = 4

[node name="body" type="VBoxContainer" parent="mods/cont"]
margin_left = 4.0
margin_top = 4.0
margin_right = 1020.0
margin_bottom = 596.0

[node name="body" type="HBoxContainer" parent="mods/cont/body"]
margin_right = 1016.0
margin_bottom = 552.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="items" type="VBoxContainer" parent="mods/cont/body/body"]
margin_right = 806.0
margin_bottom = 552.0
size_flags_horizontal = 3

[node name="top" type="HBoxContainer" parent="mods/cont/body/body/items"]
margin_right = 806.0
margin_bottom = 14.0
size_flags_horizontal = 3

[node name="enabled" type="Button" parent="mods/cont/body/body/items/top"]
margin_right = 20.0
margin_bottom = 14.0
rect_min_size = Vector2( 20, 0 )
theme_type_variation = "SolidPanelButton"
clip_text = true

[node name="name" type="Button" parent="mods/cont/body/body/items/top"]
margin_left = 24.0
margin_right = 456.0
margin_bottom = 14.0
size_flags_horizontal = 3
theme_type_variation = "SolidPanelButton"
text = "Name"

[node name="version" type="Button" parent="mods/cont/body/body/items/top"]
margin_left = 460.0
margin_right = 806.0
margin_bottom = 14.0
size_flags_horizontal = 3
size_flags_stretch_ratio = 0.8
theme_type_variation = "SolidPanelButton"
text = "Version"

[node name="mods" type="Panel" parent="mods/cont/body/body/items"]
margin_top = 18.0
margin_right = 806.0
margin_bottom = 552.0
size_flags_horizontal = 3
size_flags_vertical = 3
theme_type_variation = "DarkPanel"

[node name="list" type="ScrollContainer" parent="mods/cont/body/body/items/mods"]
anchor_right = 1.0
anchor_bottom = 1.0
scroll_horizontal_enabled = false

[node name="body" type="VBoxContainer" parent="mods/cont/body/body/items/mods/list"]
margin_right = 806.0
margin_bottom = 534.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="vs" type="VSeparator" parent="mods/cont/body/body"]
margin_left = 810.0
margin_right = 812.0
margin_bottom = 552.0

[node name="info" type="VBoxContainer" parent="mods/cont/body/body"]
margin_left = 816.0
margin_right = 1016.0
margin_bottom = 552.0
rect_min_size = Vector2( 200, 0 )

[node name="icon" type="TextureRect" parent="mods/cont/body/body/info"]
margin_right = 200.0
margin_bottom = 200.0
rect_min_size = Vector2( 0, 200 )
expand = true
stretch_mode = 6

[node name="bg" type="Panel" parent="mods/cont/body/body/info/icon"]
show_behind_parent = true
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
theme_type_variation = "DarkPanel"

[node name="list" type="ScrollContainer" parent="mods/cont/body/body/info"]
margin_top = 204.0
margin_right = 200.0
margin_bottom = 552.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="body" type="VBoxContainer" parent="mods/cont/body/body/info/list"]
margin_right = 200.0
margin_bottom = 348.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="title" type="Label" parent="mods/cont/body/body/info/list/body"]
margin_right = 200.0
margin_bottom = 13.0
theme_type_variation = "BoldLabel"
valign = 1

[node name="desc" type="RichTextLabel" parent="mods/cont/body/body/info/list/body"]
margin_top = 17.0
margin_right = 200.0
margin_bottom = 28.0
theme_type_variation = "BoldLabel"
bbcode_enabled = true
fit_content_height = true
scroll_active = false

[node name="hs0" type="HSeparator" parent="mods/cont/body/body/info/list/body"]
margin_top = 32.0
margin_right = 200.0
margin_bottom = 34.0

[node name="version" type="Label" parent="mods/cont/body/body/info/list/body"]
margin_top = 38.0
margin_right = 200.0
margin_bottom = 48.0

[node name="game_version" type="Label" parent="mods/cont/body/body/info/list/body"]
margin_top = 52.0
margin_right = 200.0
margin_bottom = 62.0

[node name="hs0" type="HSeparator" parent="mods/cont/body"]
margin_top = 556.0
margin_right = 1016.0
margin_bottom = 556.0
custom_constants/separation = 0

[node name="buttons" type="HBoxContainer" parent="mods/cont/body"]
margin_top = 560.0
margin_right = 1016.0
margin_bottom = 592.0
rect_min_size = Vector2( 0, 32 )

[node name="cancel" type="Button" parent="mods/cont/body/buttons"]
margin_right = 128.0
margin_bottom = 32.0
rect_min_size = Vector2( 128, 0 )
size_flags_horizontal = 2
theme_type_variation = "RedButton"
custom_fonts/font = ExtResource( 4 )
shortcut_in_tooltip = false
shortcut = SubResource( 4 )
text = "Cancel"

[node name="apply" type="Button" parent="mods/cont/body/buttons"]
margin_left = 692.0
margin_right = 820.0
margin_bottom = 32.0
rect_min_size = Vector2( 128, 0 )
hint_tooltip = "Restart and apply changes"
theme_type_variation = "GreenButton"
custom_fonts/font = ExtResource( 4 )
text = "Apply"

[node name="conf" type="Button" parent="mods/cont/body/buttons"]
margin_left = 824.0
margin_right = 1016.0
margin_bottom = 32.0
rect_min_size = Vector2( 192, 0 )
hint_tooltip = "Apply changes when restarting"
custom_fonts/font = ExtResource( 4 )
text = "Confierm"

[node name="Control" type="ColorRect" parent="."]
visible = false
material = SubResource( 7 )
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2

[connection signal="pressed" from="buttons/body/play" to="." method="OnPlayPressed"]
[connection signal="pressed" from="buttons/body/mods" to="." method="OnModsPressed"]
[connection signal="pressed" from="my_sm1" to="." method="OpenMyTweeter"]
[connection signal="pressed" from="my_sm2" to="." method="OpenMyDiscrod"]
